--- a/package.json
+++ b/package.json
@@ -1,15 +1,28 @@
 {
-  "name": "feature-detect",
+  "name": "node-feature-detect",
+  "description": "Feature detection for Node.js",
   "version": "1.0.0",
-  "main": "index.js",
-  "scripts": {
-    "test": "echo \"Error: no test specified\" && exit 1"
+  "author": "Rico Sta. Cruz <rico@ricostacruz.com>",
+  "bugs": {
+    "url": "https://github.com/rstacruz/node-feature-detect/issues"
   },
-  "author": "",
-  "license": "MIT",
   "dependencies": {
     "semver": "^5.0.3"
   },
   "devDependencies": {},
-  "description": ""
+  "homepage": "https://github.com/rstacruz/node-feature-detect#readme",
+  "keywords": [
+    "detect",
+    "feature",
+    "feature detect"
+  ],
+  "license": "MIT",
+  "main": "index.js",
+  "repository": {
+    "type": "git",
+    "url": "git+https://github.com/rstacruz/node-feature-detect.git"
+  },
+  "scripts": {
+    "test": "mocha"
+  }
 }
